--- a/_pages/counseling-for-poc.html
+++ b/_pages/counseling-for-poc.html
@@ -1,15 +1,29 @@
 ---
 layout: default
-title: Counseling for POC
+title: Therapy for POC - Rottenberg Therapy - West Brooklyn, NY
 description: >-
-  Contact Rottenberg Therapy, located at 245 W 29th St. New York, NY 10001.
+    If you’re a person of color in need of a safe space, therapy with POC in mind with our Black and Brown therapists can give you the freedom and safety to heal.
 permalink: /counseling-for-poc/
 ---
 
-<div class="container">
+<div class="container full-width-container">
     <div class="row header">
-        <div class="col-sm-12">
+        <div class="col-12">
             <h1 class="page-header">Counseling for POC</h1>
         </div>
     </div>
+        {% for section in site.data.specialty.poc %}
+        <div class="col-lg-10 col-md-10 col-sm-12"> 
+            {% if section.header %}
+            <div class="row"><h2>{{section.header}}</h2></div>
+            {% elsif section.subheader %}
+            <div class="row">
+                <h3>{{section.subheader}}</h3>
+            </div>
+            {% endif %}
+            <p>{{section.paragraph}}</p>
+            <p>{{section.list}}</p>
+        </div>
+        {% endfor %}
+
 </div>
