--- a/_pages/counseling-for-poc.html
+++ b/_pages/counseling-for-poc.html
@@ -9,7 +9,7 @@ permalink: /counseling-for-poc/
 <div class="container full-width-container">
     <div class="row header">
         <div class="col-12">
-            <h1><strong>Counseling for POC</strong></h1>
+            <h1><strong>{{site.data.specialty.poc[0].page-header}}</strong></h1>
         </div>
     </div>
         {% for section in site.data.specialty.poc %}
