--- a/_pages/counseling-for-poc.html
+++ b/_pages/counseling-for-poc.html
@@ -21,6 +21,11 @@ permalink: /counseling-for-poc/
             {% endif %}
             <p>{{section.paragraph | markdownify}}</p> 
         </div>
-        {% endfor %}
-
+        {% endfor %}     
+            <div style="text-align: center;" class="col-lg-8 col-md-12 col-sm-12 section">
+                <a href="{% link _pages/contact.html %}">
+                    <button class="mdc-button mdc-button--raised schedule">Schedule a Free Consultation</button>
+                </a>
+                <h3>We offer both virtual and in-person appointments</h3>
+            </div>      
 </div>
