--- a/_pages/counseling-for-poc.html
+++ b/_pages/counseling-for-poc.html
@@ -13,7 +13,7 @@ permalink: /counseling-for-poc/
         </div>
     </div>
         {% for section in site.data.specialty.poc %}
-        <div class="col-lg-8 col-md-12 col-sm-12 section"> 
+        <div class="col-lg-8 col-md-12 col-sm-12 section clearfix"> 
             {% if section.header %}
             <div class="row"><h2 class="page-header">{{section.header}}</h2></div>
             {% elsif section.subheader %}
